--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
-include TODO.md
-include README.md
+include TODO.rst
+include README.rst
+include CHANGES.rst
 include LICENSE
 include MANIFEST.in
 exclude .gitignore
