--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-PyYAML==3.11
-clint==0.4.1
-docker==2.1.0
-six==1.9.0
-flask==0.10.1
-gevent==1.1.1
+PyYAML>=3.11,<6.0
+clint>=0.4.1,<0.6
+docker>=2.1.0,<3.8
+six>=1.9.0,<1.12.0
+flask>=0.10.1,<1.0
+gevent>=1.1.1,<1.5
