--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [nosetests]
-where=blockade
+where=embargo
 nocapture=1
-cover-package=blockade
+cover-package=embargo
 cover-erase=1
 cover-inclusive=1
